--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,8 @@
  * work well for content-centric websites.
  */
 
+/* rgb(233,233,233) */
+
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #2e8555;
@@ -27,4 +29,16 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.token.keyword {
+  font-style: normal !important;
+}
+
+.token.comment {
+  font-style: italic !important;
+}
+
+code:not(:has(span)) {
+  padding-inline: 5px !important;
 }
